fixed layout issue in mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,9 +23,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  overflow-x: hidden; 
+}
 body {
   background: var(--white);
-  overflow-x: hidden;
+
 }
 
 /* Prevent background scrolling when modal is open */
